WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191624
WebKit.WKHTTPCookieStoreWithoutProcessPool API test is failing with process prewarming is enabled
https://bugs.webkit.org/show_bug.cgi?id=191624
Summary
WebKit.WKHTTPCookieStoreWithoutProcessPool API test is failing with process p...
Chris Dumez
Reported
2018-11-13 21:34:32 PST
TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool API test is failing with process prewarming is enabled: TestWebKitAPI.WebKit.WKHTTPCookieStoreWithoutProcessPool /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:473 Expected equality of these values: "PersistentCookieName=CookieValue; SessionCookieName=CookieValue" message.UTF8String Which is: "PersistentCookieName=CookieValue"
Attachments
Patch
(6.73 KB, patch)
2018-11-13 21:58 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.74 KB, patch)
2018-11-14 07:32 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-13 21:58:34 PST
Created
attachment 354770
[details]
Patch
Alex Christensen
Comment 2
2018-11-14 06:07:28 PST
Comment on
attachment 354770
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354770&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:482 > +enum ShouldEnableProcessPrewarming { No, Yes };
enum class
Chris Dumez
Comment 3
2018-11-14 07:04:58 PST
(In reply to Alex Christensen from
comment #2
)
> Comment on
attachment 354770
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=354770&action=review
> > > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:482 > > +enum ShouldEnableProcessPrewarming { No, Yes }; > > enum class
Oh, duh...
Chris Dumez
Comment 4
2018-11-14 07:32:32 PST
Created
attachment 354809
[details]
Patch
WebKit Commit Bot
Comment 5
2018-11-14 07:50:13 PST
Comment on
attachment 354809
[details]
Patch Clearing flags on attachment: 354809 Committed
r238174
: <
https://trac.webkit.org/changeset/238174
>
WebKit Commit Bot
Comment 6
2018-11-14 07:50:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-14 07:51:44 PST
<
rdar://problem/46062884
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug